fix horizontal scrollbar due to window being resized while confetti animation plays

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -11,6 +11,7 @@ body {
   justify-content: center;
   margin: 0;
   min-height: 100vh;
+  overflow: hidden;
   text-align: center;
 }
 
